# rust_constraint_solver

./: .gitignore  Cargo.toml
backup/backup/: scope.rs  solution.rs  solver.rs
doc/: flow.md
src/: entity_registry.rs  lib.rs  score.rs
src/score_impl/: hard_soft_int_score.rs  mod.rs
src/termination/: mod.rs  time_based_termination.rs
tests/: knapsack.rs
